force-app/main/default/objects/EntitlementD__c/EntitlementD__c.object-meta.xml
<CustomObject>
    <label>EntitlementD</label>
    <nameField>
        <label>Entitlement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EntitlementsD</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>