force-app/main/default/objects/EntitlementD__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>EntitlementC</relationshipName>
    <type>Lookup</type>
</CustomField>