force-app/main/default/objects/EntitlementD__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Entitlement</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>