force-app/main/default/objects/EntitlementD__c/fields/Allowed_Phone_Support_2__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Phone_Support_2__c</fullName>
    <formula>IF(
OR(PlanType__c = &quot;Premier Plan&quot;, PlanType__c =&quot;Standard Plan&quot;,PlanType__c = &quot;Classic Plan&quot;),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allowed Phone Support (2)</label>
    <type>Checkbox</type>
</CustomField>