force-app/main/default/objects/EntitlementD__c/fields/AllowedPhoneSupport__c.field-meta.xml
<CustomField>
    <fullName>AllowedPhoneSupport__c</fullName>
    <formula>CASE(   PlanType__c , 
&quot;Premier&quot;,  IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Entitled to Phone Support&quot;), 
&quot;Standard&quot;, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Entitled to Phone Support&quot;),
&quot;Classic&quot;, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Entitled to Phone Support&quot;), 
&quot;Essential&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Not Entitled to Phone Support&quot;),
&quot;No Phone Support&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone/Email</label>
    <type>Text</type>
</CustomField>