force-app/main/default/objects/EntitlementD__c/fields/AssetName__c.field-meta.xml
<CustomField>
    <fullName>AssetName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Name</label>
    <referenceTo>Asset</referenceTo>
    <relationshipName>Entitlement</relationshipName>
    <type>Lookup</type>
</CustomField>