force-app/main/default/objects/EntitlementD__c/fields/AssociatedProductRange__c.field-meta.xml
<CustomField>
    <fullName>AssociatedProductRange__c</fullName>
    <label>Associated Product Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductRange</valueSetName>
    </valueSet>
</CustomField>