force-app/main/default/objects/EntitlementD__c/fields/CasesPerEntitlement__c.field-meta.xml
<CustomField>
    <fullName>CasesPerEntitlement__c</fullName>
    <label>Cases Per Entitlement</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>