force-app/main/default/objects/EntitlementD__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipName>Entitlement_c</relationshipName>
    <type>Lookup</type>
</CustomField>