force-app/main/default/objects/EntitlementD__c/fields/ContractLineItem__c.field-meta.xml
<CustomField>
    <fullName>ContractLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Line Item</label>
    <referenceTo>ContractLineItem</referenceTo>
    <relationshipName>Entitlement</relationshipName>
    <type>Lookup</type>
</CustomField>