force-app/main/default/objects/EntitlementD__c/fields/CustomerSuccessManager__c.field-meta.xml
<CustomField>
    <fullName>CustomerSuccessManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Success Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Entitlement_c</relationshipName>
    <type>Lookup</type>
</CustomField>