force-app/main/default/objects/EntitlementD__c/fields/EntitledHowToQuestions__c.field-meta.xml
<CustomField>
    <fullName>EntitledHowToQuestions__c</fullName>
    <formula>CASE(  PlanType__c  , 

      &quot;Premier&quot;,  IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Access to How To Questions&quot;), 

      &quot;Standard&quot;, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;Access to How To Questions&quot;),

      &quot;Classic&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Access to How To Questions&quot;),

      &quot;Essential&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;Access to How To Questions&quot;),

      &quot;No Plan Selected&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>&quot;How To&quot; Qs</label>
    <type>Text</type>
</CustomField>