force-app/main/default/objects/EntitlementD__c/fields/HowToQs__c.field-meta.xml
<CustomField>
    <fullName>HowToQs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HowToQs</label>
    <type>Checkbox</type>
</CustomField>