force-app/main/default/objects/EntitlementD__c/fields/IsPerIncident__c.field-meta.xml
<CustomField>
    <fullName>IsPerIncident__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Per Incident</label>
    <type>Checkbox</type>
</CustomField>