force-app/main/default/objects/EntitlementD__c/fields/NamedAgentEntitlement__c.field-meta.xml
<CustomField>
    <fullName>NamedAgentEntitlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Named Agent (Premier Plan Only)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Entitlement_c1</relationshipName>
    <type>Lookup</type>
</CustomField>