force-app/main/default/objects/EntitlementD__c/fields/NoLimitText__c.field-meta.xml
<CustomField>
    <fullName>NoLimitText__c</fullName>
    <formula>&quot;No Limit&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Limit Text</label>
    <type>Text</type>
</CustomField>