force-app/main/default/objects/EntitlementD__c/fields/NotifyCSMofPendingBreach__c.field-meta.xml
<CustomField>
    <fullName>NotifyCSMofPendingBreach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify CSM of Pending Breach</label>
    <type>Checkbox</type>
</CustomField>