force-app/main/default/objects/EntitlementD__c/fields/PhoneEmailCheckbox__c.field-meta.xml
<CustomField>
    <fullName>PhoneEmailCheckbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Phone/Email</label>
    <type>Checkbox</type>
</CustomField>