force-app/main/default/objects/EntitlementD__c/fields/PlanType__c.field-meta.xml
<CustomField>
    <fullName>PlanType__c</fullName>
    <label>Plan Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>