force-app/main/default/objects/EntitlementD__c/fields/Product_Routing__c.field-meta.xml
<CustomField>
    <fullName>Product_Routing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Associated Product Range</label>
    <referenceTo>ProductRouting__c</referenceTo>
    <relationshipLabel>EntitlementsD</relationshipLabel>
    <relationshipName>EntitlementsD</relationshipName>
    <type>Lookup</type>
</CustomField>