force-app/main/default/objects/EntitlementD__c/fields/RemainingCases__c.field-meta.xml
<CustomField>
    <fullName>RemainingCases__c</fullName>
    <label>Remaining Cases</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>