force-app/main/default/objects/EntitlementD__c/fields/ServiceContract__c.field-meta.xml
<CustomField>
    <fullName>ServiceContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Contract</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipName>Entitlement_c</relationshipName>
    <type>Lookup</type>
</CustomField>