force-app/main/default/objects/EntitlementD__c/fields/StatusImage__c.field-meta.xml
<CustomField>
    <fullName>StatusImage__c</fullName>
    <formula>IF( (EndDate__c - StartDate__c  &gt;0), &quot;Active&quot;, &quot;Inactive&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>