force-app/main/default/objects/EntitlementD__c/fields/SubProductArea__c.field-meta.xml
<CustomField>
    <fullName>SubProductArea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Product Area</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Entitlement_c</relationshipName>
    <type>Lookup</type>
</CustomField>