force-app/main/default/objects/EntitlementD__c/fields/TopicID__c.field-meta.xml
<CustomField>
    <fullName>TopicID__c</fullName>
    <formula>Entitlement__r.TopicID__c</formula>
    <label>Topic ID</label>
    <type>Text</type>
</CustomField>